# sequence-classifier

./: .gitignore  README.md  pyproject.toml
examples/: README.md  wnut.py
src/sequence_classifier/: semiring.py
src/sequence_classifier/crf/: __init__.py  core.py
tests/: test_crf.py
